--- a/css/janken.css
+++ b/css/janken.css
@@ -2,6 +2,9 @@ body {
     background: white;
     margin: 0px;
     padding: 0px;
+    min-width: 400px;
+    max-width: 800px;
+    margin: auto;
 }
 
 .rockImg {
@@ -22,20 +25,26 @@ body {
     height: 115px;
 }
 
-.selectionBtn {
-    cursor: pointer;
-}
-
 .scores , .timers {
     width: 49%;
+    max-width: 400px;
+    min-width: 380px;
     display: inline-block;
     text-align: center;
-    vertical-align: bottom;
+    vertical-align: top;
+}
+
+.timers > div {
+    width: 100%;
 }
 
 .scores canvas {
     width: 100px;
     height: 50px;
+}
+
+.scores h3 {
+    margin-bottom: 5px;
 }
 
 .scores > div, .timers > div {
@@ -51,10 +60,17 @@ body {
     width: 49%;
     display: inline-block;
     text-align: center;
+    vertical-align: top;
+}
+
+.player > button {
+    margin: 4%;
+    cursor: pointer;
 }
 
 .npc {
     width: 49%;
+    max-width: 400px;
     display: inline-block;
     text-align: center;
 }
@@ -62,7 +78,32 @@ body {
 .npc > div {
     display: inline-block;
     width: 34%;
-    margin-top: 8%;
+    min-width: 115px;
+    max-height: 115px;
+    margin: 4%;
+}
+
+.janken {
+    width: 100%;
+}
+
+.timerInput input {
+    width: 155px;
+    height: 30px;
+    margin: 10px;
+}
+
+.timerSubmits button {
+    width: 110px;
+    height: 50px;
+    margin: 10px 35px;
+    cursor: pointer;
+}
+
+#timerDisplay {
+    width: 340px;
+    height: 70px;
+    margin: 10px;
 }
 
 canvas {
