--- a/css/janken.css
+++ b/css/janken.css
@@ -7,15 +7,15 @@ body {
     margin: auto;
 }
 
-.rockImg {
+.rock {
     background-image: url(../images/rock.png);
 }
 
-.paperImg {
+.paper {
     background-image: url(../images/paper.png);
 }
 
-.scissorImg {
+.scissor {
     background-image: url(../images/scissor.png);
 }
 
@@ -32,15 +32,11 @@ body {
     display: inline-block;
     text-align: center;
     vertical-align: top;
+    font-family: 'Nova Square', cursive;
 }
 
 .timers > div {
     width: 100%;
-}
-
-.scores canvas {
-    width: 100px;
-    height: 50px;
 }
 
 .scores h3 {
@@ -101,8 +97,6 @@ body {
 }
 
 #timerDisplay {
-    width: 340px;
-    height: 70px;
     margin: 10px;
 }
 
