--- a/css/janken.css
+++ b/css/janken.css
@@ -19,13 +19,15 @@ body {
     background-image: url(../images/scissor.png);
 }
 
-.selectionBtn, .selection {
+.selectionBtn,
+.selection {
     background-size: 100%;
     width: 115px;
     height: 115px;
 }
 
-.scores , .timers {
+.scores,
+.timers {
     width: 49%;
     max-width: 400px;
     min-width: 380px;
@@ -43,7 +45,12 @@ body {
     margin-bottom: 5px;
 }
 
-.scores > div, .timers > div {
+.scores > div {
+    padding: 15px;
+    border: 3px solid black;
+}
+
+.timers > div {
     padding: 15px;
 }
 
@@ -91,6 +98,15 @@ button[disabled] {
     width: 155px;
     height: 30px;
     margin: 10px;
+    display: block;
+}
+
+.timerInput label {
+    display: block;
+}
+
+.timerInput > div {
+    display: inline-block;
 }
 
 .timerSubmits button {
@@ -98,12 +114,26 @@ button[disabled] {
     height: 50px;
     margin: 10px 35px;
     cursor: pointer;
+    font-size: 30px;
+    font-family: 'Nova Square', cursive;
+    outline: none;
+    color: white;
+    background-color: green;
+    border: none;
+    border-radius: 15px;
+    box-shadow: 5px 5px lightgrey;
+}
+
+.timerSubmits button:active {
+  background-color: darkgreen;
+  box-shadow: 2px 2px darkgrey;
+  transform: translateY(3px);
+}
+
+.timerSubmits button[value='stop'] {
+    background-color: red;
 }
 
 #timerDisplay {
     margin: 10px;
-}
-
-canvas {
-    border: 1px solid black;
 }
