--- a/css/janken.css
+++ b/css/janken.css
@@ -28,6 +28,10 @@ header h1 {
     margin: 0px;
 }
 
+h3 {
+    margin-bottom: 5px;
+}
+
 .rock {
     background-image: url(../images/rock.png);
 }
@@ -61,17 +65,9 @@ header h1 {
     width: 100%;
 }
 
-.scores h3 {
-    margin-bottom: 5px;
-}
-
 .scores > div {
     padding: 15px;
     border: 3px solid black;
-}
-
-.timers > div {
-    padding: 15px;
 }
 
 .scores > div > div {
@@ -136,7 +132,7 @@ button[disabled] {
 .timerSubmits button {
     width: 110px;
     height: 50px;
-    margin: 10px 35px;
+    margin: 10px 35px 30px 35px;
     cursor: pointer;
     font-size: 30px;
     font-family: 'Nova Square', cursive;
@@ -159,5 +155,5 @@ button[disabled] {
 }
 
 #timerDisplay {
-    margin: 10px;
+    margin: 0px 10px 10px 10px;
 }
