--- a/css/janken.css
+++ b/css/janken.css
@@ -4,10 +4,9 @@ html {
 }
 
 body {
-    margin: 0px;
     padding: 0px;
     min-width: 400px;
-    max-width: 800px;
+    max-width: 900px;
     margin: auto;
     text-align: center;
     background: linear-gradient(180deg, lightgrey 5%, ghostwhite 40%, white 50%);
@@ -28,8 +27,9 @@ header h1 {
     margin: 0px;
 }
 
-h3 {
-    margin-bottom: 5px;
+.scores h3,
+.timerDisplay h1 {
+    margin-bottom: 0px;
 }
 
 .rock {
@@ -55,6 +55,10 @@ h3 {
     box-shadow: 5px 5px lightgrey;
 }
 
+.selection {
+    border: 5px solid grey;
+}
+
 .scores,
 .timers {
     width: 49%;
@@ -65,6 +69,13 @@ h3 {
     vertical-align: top;
 }
 
+.timers {
+    -webkit-transition: all 1s ease-in-out;
+    -moz-transition: all 1s ease-in-out;
+    -o-transition: all 1s ease-in-out;
+    transition: all 3s ease-in-out;
+}
+
 .timers > div {
     width: 100%;
 }
@@ -72,6 +83,8 @@ h3 {
 .scores > div {
     padding: 15px;
     border: 3px solid black;
+    border-radius: 40px;
+    box-shadow: 5px 5px lightgrey;
 }
 
 .scores > div > div {
@@ -166,4 +179,12 @@ button[disabled] {
 
 #timerDisplay {
     margin: 0px 10px 10px 10px;
+}
+
+.win {
+    border: 5px solid green;
+}
+
+.lose {
+    border: 5px solid red;
 }
